@@ -2,6 +2,16 @@
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Fixed
+  --ask bug with --changelog. This should close #41293.
+
+  11 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emergehelp.py: Added
+  help of F flag with emerge --pretend. This should close #28253.
+
+  11 Feb 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py: Fixed 
+  ccache dir permission problem with FEATURES="userpriv".
+  This should fix #22125.
+
 *portage-2.0.50-r1 (09 Feb 2003): Release Fixes
 
   09 Jan 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix the config
